# Chopinote-AI

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  config.yaml  hello.py  pyproject.toml  requirements.txt  test_feedback.py
Design_docs/: codebase_audit.md  mlp_gqa_mqa.md
chopinote_abc/: __init__.py  affect.py  constraints.py  database.py  decision.py  logging.py  metrics.py  motif.py  parser.py  planner.py  scoring.py
chopinote_cli/: __init__.py  config.py  generation_config.yaml  main.py  presets.py  remi_grammar.py  terminal.py
chopinote_dataset/: __init__.py  converter.py  fast_converter.py  lmdb_store.py  processor.py  renderer.py  splitter.py  tokenizer.py
chopinote_dateset/: converter.py  dateset.py  processor.py  tokenizer.py
chopinote_evaluator/: feedback_controller.py  parser.py  registry.py  report.py  score.py
chopinote_model/: __init__.py  auto_config.py  config.py  dataset.py  fp8_linear.py  generate.py  model.py  train.py
data/: eval_seeds.txt
design_docs/: bass_note_token.md  idea.txt  midi_converter_design.md  model_scaling_plans.md  modification_directions.md  reference_models_research.md  unlimited_tracks_B_voice_scheme.md
docs/: ROADMAP.md  alibi_fp8_progress.md  conditional_embedding_path_b.md  evaluation_feedback_loop.md  fp8_attention_optimization.md  project_gap_analysis.md  sequence_parallelism.md  tonality_and_harmony_scheme.md  v0.3.3_audit_gap_analysis.md
scripts/: annotate_function.py  annotate_sections_batch.py  annotate_sections_worker.py  audit_fig_func_sample.py  audit_ssf_sample.py  backfill_source_hashes.py  (+31 more)
(+65 files in other folders)
