[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chopinote-ai"
version = "0.1.0-Beta4"
description = "自动生成古典钢琴曲谱的 AI 系统"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Derancarls"},
]
dependencies = [
    "music21>=9.9",
    "numpy>=1.26",
    "tqdm>=4.67",
    "PyYAML>=6.0",
    "torch>=2.0",
]

[project.scripts]
chopinote-generate = "chopinote_cli.main:main"

[tool.setuptools.packages.find]
include = ["chopinote_cli*", "chopinote_dataset*", "chopinote_model*"]
